fix: context Natal chart
